--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Welcome to the Third VMI Bootcamp! &#8212; VMI Bootcamp II 1.0 documentation</title>
+    <title>Welcome to the Third VMI Bootcamp! &#8212; VMI Bootcamp III 1.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
