Updates to content

--- a/rst/2_experimental_design.html
+++ b/rst/2_experimental_design.html
@@ -199,9 +199,9 @@
 <li><dl class="first docutils">
 <dt>Always include blank water samples</dt>
 <dd><ul class="first last">
-<li>Collection blank</li>
-<li>Extraction blank</li>
-<li>Library preparation blank</li>
+<li>Collection blanks</li>
+<li>Extraction blanks</li>
+<li>Library preparation blanks</li>
 </ul>
 </dd>
 </dl>
@@ -209,7 +209,7 @@
 </ul>
 <blockquote>
 <div><ul class="simple">
-<li>Sequencing blank</li>
+<li>Sequencing blanks</li>
 </ul>
 </div></blockquote>
 <ul class="simple">
