--- a/rst/4_concepts_of_community_analysis.html
+++ b/rst/4_concepts_of_community_analysis.html
@@ -114,7 +114,7 @@ qiime tools import <span class="se">\</span>
 qiime tools import <span class="se">\</span>
    --input-path american_gut/1_0_tax.tsv <span class="se">\</span>
    --output-path american_gut/1_1_tax.qza <span class="se">\</span>
-   --type FeatureData<span class="o">[</span>Taxonomy<span class="o">]</span> <span class="se">\</span>
+   --type 'FeatureData <span class="o">[</span>Taxonomy<span class="o">]''</span> <span class="se">\</span>
    --input-format HeaderlessTSVTaxonomyFormat
 
 <span class="c1"># Create a visual of the metadata (map.txt)</span>
