--- a/rst/3_sequences_to_composition.html
+++ b/rst/3_sequences_to_composition.html
@@ -352,6 +352,7 @@ qiime tools import <span class="se">\</span>
    --type EMPPairedEndSequences <span class="se">\</span>
    --input-path paired_end/raw_seqs/ <span class="se">\</span>
    --output-path paired_end/1_0_input_seqs.qza
+   --output-dir paired_end/1_0_extra.qza
 
 <span class="c1"># See the new output file</span>
 ls -lsh paired_end
