--- a/rst/5_analysis_and_hypothesis_testing.html
+++ b/rst/5_analysis_and_hypothesis_testing.html
@@ -153,15 +153,13 @@
 </ul>
 </dd>
 </dl>
-
 <dt><strong>Here is a great example of one way things can go wrong…</strong></dt>
 <dd><ul class="first last simple">
 <li>Let’s say there are 20 taxon in an ordination</li>
 <li>Linearly related with taxon 1 most distant from taxon 20</li>
-<p><strong>Here is my favorite example using human genetic data:</strong></p>
 <div class="figure" id="id3">
 <a class="reference internal image-reference" href="../_images/Diagonal.gif"><img alt="genetic_pca" src="../_images/Diagonal.gif" style="width: 640.0px; height: 830.4px;" /></a>
-<p class="caption"><span class="caption-text">Linear Data.
+<p class="caption"><span class="caption-text"
 <li><dl class="first docutils">
 <dt>Clearly we don’t see that below</dt>
 <dd><ul class="first last">
