--- a/rst/2_experimental_design.html
+++ b/rst/2_experimental_design.html
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="1_microbiome_introduction.html" title="Microbiome Introduction"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp II 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
