--- a/rst/4_concepts_of_community_analysis.html
+++ b/rst/4_concepts_of_community_analysis.html
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="3_sequences_to_composition.html" title="From Sequences to Community Composition"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp II 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
