--- a/rst/5_analysis_and_hypothesis_testing.html
+++ b/rst/5_analysis_and_hypothesis_testing.html
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="4_concepts_of_community_analysis.html" title="Concepts of Community Analysis"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp II 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
