--- a/rst/location.html
+++ b/rst/location.html
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to the Third VMI Bootcamp!"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp II 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
