--- a/rst/5_analysis_and_hypothesis_testing.html
+++ b/rst/5_analysis_and_hypothesis_testing.html
@@ -285,7 +285,7 @@ qiime tools view american_gut/2_8_taxonomy_l5_heatmap.qzv
 <dd><ul class="first last simple">
 <li>qiime feature-table heatmap –help</li>
 <li>Options to normalize or not (default = True)</li>
-<li>Options for the metric to calculate sample distance (default = Euclidian = bad)</li>
+<li>Options for the metric to calculate sample distance (default = Euclidian)</li>
 <li>Options for the method to use when clustering (default = average)</li>
 <li><em>I wouldn’t use the default metric and clustering method</em></li>
 </ul>
