--- a/rst/2_experimental_design.html
+++ b/rst/2_experimental_design.html
@@ -446,7 +446,7 @@
 <li><dl class="first docutils">
 <dt>Could do full 16S gene</dt>
 <dd><ul class="first last">
-<li>Very high strain level resolution</li>
+<li>Strain level resolution</li>
 <li>But <em>much</em> lower coverage and multiplexing = higher costs</li>
 <li>Higher error rates</li>
 </ul>
