--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Search &#8212; VMI Bootcamp III 1.0 documentation</title>
+    <title>Search &#8212; VMI Bootcamp IV 1.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
 
@@ -34,7 +34,7 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
-        <li class="nav-item nav-item-0"><a href="index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
@@ -82,11 +82,11 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
-        <li class="nav-item nav-item-0"><a href="index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2019, Robert Markowitz, Andrew Brooks, Matt Scholz, Seth Bordenstein.
+        &#169; Copyright 2020, Liz Mallott, Robert Markowitz, Andrew Brooks, Matt Scholz, Seth Bordenstein.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
