--- a/rst/3_sequences_to_composition.html
+++ b/rst/3_sequences_to_composition.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>From Sequences to Community Composition &#8212; VMI Bootcamp III 1.0 documentation</title>
+    <title>From Sequences to Community Composition &#8212; VMI Bootcamp IV 1.0 documentation</title>
     <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
 
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="2_experimental_design.html" title="Experimental Design and Sample Preparation"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
     <div class="document">
@@ -836,7 +836,7 @@ qiime tools view paired_end/3_5_taxonomy_visualization.qzv
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2019, Robert Markowitz Andrew Brooks, Matt Scholz, Seth Bordenstein.
+        &#169; Copyright 2020, Liz Mallott, Robert Markowitz Andrew Brooks, Matt Scholz, Seth Bordenstein.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
