--- a/rst/4_concepts_of_community_analysis.html
+++ b/rst/4_concepts_of_community_analysis.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Concepts of Community Analysis &#8212; VMI Bootcamp III 1.0 documentation</title>
+    <title>Concepts of Community Analysis &#8212; VMI Bootcamp IV 1.0 dIVmentation</title>
     <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
 
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="3_sequences_to_composition.html" title="From Sequences to Community Composition"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp III 1.0 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../index.html">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
 
@@ -900,7 +900,7 @@ qiime tools view <span class="s2">&quot;</span><span class="nv">$diversity_folde
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2019, Robert Markowitz, Andrew Brooks, Matt Scholz, Seth Bordenstein.
+        &#169; Copyright 2020, Liz Mallott, Robert Markowitz, Andrew Brooks, Matt Scholz, Seth Bordenstein.
       Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.8.1.
     </div>
   </body>
