Updated info about advantages and disadvantages of amplicon sequencing

--- a/rst/1_microbiome_introduction.html
+++ b/rst/1_microbiome_introduction.html
@@ -394,6 +394,7 @@
 <dt>Resolution is limited because the amplicons are short, so generally family or genera is the most that can be distinguished.</dt>
 <dd><ul class="first last">
 <li>Really cannot confidently distinguish species or strains within a genus.</li>
+<li>Newer primers for longer amplicon regions (e.g., 16S V4-V5) allow for species-level resolution, but still not strain-level resolution</li>
 </ul>
 </dd>
 </dl>
@@ -410,6 +411,7 @@
 <dd><ul class="first last">
 <li>The databases try to correct for this, but it’s not perfect.</li>
 <li>This means there is some bias in the relative abundance of members.</li>
+<li>16S rt-qPCR can be used to quantify the total number of 16S rRNA genes in your sample or the number of 16S rRNA genes for a specific taxonomic group of bacteria</li>
 </ul>
 </dd>
 </dl>
