--- a/rst/4_concepts_of_community_analysis.html
+++ b/rst/4_concepts_of_community_analysis.html
@@ -756,6 +756,13 @@ sklearn.metrics.pairwise_distances)
 ls -lsh american_gut/2_3_diversity_core_phylogenetic/
 </pre></div>
 </div>
+<p>What do you notice about the types of files that were made?</p>
+<dl class="docutils">
+<dt>If for some reason you don’t have a phylogeny, there is a non-phylogenetic wrapper method</dt>
+<dd><ul class="first last simple">
+<li>One could also aruge about the degree to which functional similarity parallels genetic similarity of the 16S rRNA gene</li>
+</ul>
+</dd>
 <dt><strong>Let’s look at the alpha diversity</strong></dt>
 <dd><ul class="first last simple">
 <li>Here I get a bit more fancy, wrapping each of the metrics in a for loop</li>
