--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Bootcamp Location" href="rst/location.html" />
+    <link rel="next" title="Microbiome Introduction" href="rst/1_microbiome_introduction.html" />
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -26,9 +26,6 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
-        <li class="right" >
-          <a href="rst/location.html" title="Bootcamp Location"
-             accesskey="N">next</a> |</li>
         <li class="nav-item nav-item-0"><a href="#">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
     </div>
