--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="genindex.html" title="General Index"
+          <a href="rst/1_microbiome_introduction.html" title="next"
              accesskey="I">index</a></li>
         <li class="nav-item nav-item-0"><a href="#">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
