--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 </ul>
 
   <h4>Next topic</h4>
-  <p class="topless"><a href="rst/location.html"
-                        title="next chapter">Bootcamp Location</a></p>
+
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -196,7 +195,7 @@
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="rst/location.html" title="Bootcamp Location"
+          <a href="rst/1_microbiome_introduction.html" title="Bootcamp Location"
              >next</a> |</li>
         <li class="nav-item nav-item-0"><a href="#">VMI Bootcamp IV 1.0 documentation</a> &#187;</li>
       </ul>
