--- a/rst/4_concepts_of_community_analysis.html
+++ b/rst/4_concepts_of_community_analysis.html
@@ -768,7 +768,7 @@ ls -lsh american_gut/2_3_diversity_core_phylogenetic/
 
 <span class="c1">##### ALPHA DIVERSITY ANALYSES #####</span>
 <span class="c1"># for each alpha diversity metric...</span>
-<span class="k">for</span> alpha_metric in faith_pd shannon observed_otus evenness
+<span class="k">for</span> alpha_metric in faith_pd shannon observed_features evenness
 <span class="k">do</span>
    <span class="c1"># print the diversity vector name</span>
    <span class="nb">echo</span> <span class="s2">&quot;</span><span class="nv">$diversity_folder</span><span class="s2">&quot;&quot;</span><span class="nv">$alpha_metric</span><span class="s2">&quot;</span>_vector.qza
