--- a/rst/3_sequences_to_composition.html
+++ b/rst/3_sequences_to_composition.html
@@ -615,7 +615,7 @@ qiime phylogeny align-to-tree-mafft-fasttree <span class="se">\</span>
    --o-alignment paired_end/3_0_dada2_aligned_seqs.qza <span class="se">\</span>
    --o-masked-alignment paired_end/3_1_dada2_aligned_masked.qza <span class="se">\</span>
    --o-tree paired_end/3_2_dada2_tree_unrooted.qza <span class="se">\</span>
-   --o-rooted-tree paired_end/3_3_dada2_tree.qza <span class="se">\</span>
+   --o-rooted-tree paired_end/3_3_dada2_tree.qza
 
 <span class="c1"># look at files</span>
 ls -lsh paired_end
